# wbsv-cli

./: .gitignore  Pipfile  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py  test_wbsv.py  up.sh  upversion.sh
.github/workflows/: codeql-analysis.yml  release.yml  style-check.yml  test.yml
test/: page.json  test_wbsv.py
wbsv/: Archive.py  Find.py  Help.py  Interact.py  Main.py  ParseArgs.py  Version.py  __init__.py  archiver.py  crawler.py  finder.py  interactive.py  main-refactor.py  main.py  url_filters.py  utils.py
wbsv/old/: Interact.py.old
