[metadata]
name = wbsv
version = attr: wbsv.__init__.__version__
description = Throw all URIs in a page on to Wayback Machine from CLI.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/eggplants/wbsv-cli
author = eggplants
author_email = w10776e8w@yahoo.co.jp
classifiers =
    Development Status :: 3 - Alpha

[aliases]
test = pytest

[options]
packages = find:
include_package_data = True
install_requires =
    waybackpy>=3.0.0
    beautifulsoup4>=4.10.0
    requests>=2.27.1
    lxml>=4.7.1

[options.entry_points]
console_scripts =
    wbsv = wbsv.main:main

[options.extras_require]
dev =
    isort>=5.10.1
    black>=21.12
    pytest>=6.2.5
    flake8>=4.0.1

[isort]
profile = black

[mypy]
python_version = 3.9
pretty = True
strict = True
