[metadata]
name = wbsv
version = attr: wbsv.__init__.__version__
description = Throw all URIs in a page on to Wayback Machine from CLI.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/eggplants/wbsv-cli
author = eggplants
author_email = w10776e8w@yahoo.co.jp
classifiers =
    Development Status :: 3 - Alpha

[aliases]
test = pytest

[options]
python_requires= >= 3.8
packages = find:
include_package_data = True
install_requires =
    beautifulsoup4>=4.10.0
    lxml>=4.7.1
    requests>=2.27.1
    waybackpy>=3.0.2
    types-beautifulsoup>=4.10.0
    types-requests>=2.27.11

[options.package_data]
wbsv = py.typed

[options.entry_points]
console_scripts =
    wbsv = wbsv.main:main

[options.extras_require]
dev =
    black>=21.12b0
    flake8>=4.0.1
    isort>=5.10.1
    mypy>=0.931
    pytest>=6.2.5
    types-setuptools>=57.4.7

[isort]
profile = black

[flake8]
# E501: line too long
ignore = E501
indent-size = 4

[mypy]
python_version = 3.9
pretty = True
strict = True
